BugFix: aggiunto z-index e annullata trasparenza per men? (Bug: il men? si compenetrava in scroll). RIdotta altezza header.

--- a/web/style/style.css
+++ b/web/style/style.css
@@ -188,6 +188,8 @@ a:hover.linkWbsGrafico {
 	position: fixed;
 	top: 0;
 	width: 100%;
+	z-index: 1000;
+	box-shadow: 0 3px 0px rgba(0,0,0,0);
 }
 
 label.linkStatus {
@@ -565,7 +567,7 @@ textarea {
 
 .header {
 	 background-color: #b2cfcd; /*linear-gradient(to bottom, #b2cfcd, #ffffff);*/
-	 height: 100px;
+	 height: 80px;
 }
 
 /*---------------------- Additional styles ------------------------*/
